[gd_scene load_steps=5 format=3 uid="uid://gsqjibrfwuqi"]

[ext_resource type="Script" path="res://scripts/map-geno/user-interface/inspector/inspector_input_vector.gd" id="1_4rby0"]
[ext_resource type="Texture2D" uid="uid://cisur08bba4ub" path="res://assets/icons/x-axis-icon.png" id="2_xmo17"]
[ext_resource type="Texture2D" uid="uid://b0f573wjmatth" path="res://assets/icons/y-axis-icon.png" id="3_gtjwu"]
[ext_resource type="Texture2D" uid="uid://dp51dmld1upbi" path="res://assets/icons/z-axis-icon.png" id="4_pcagv"]

[node name="InspectorInputVector" type="Panel"]
clip_contents = true
custom_minimum_size = Vector2(200, 130)
offset_right = 200.0
offset_bottom = 130.0
size_flags_horizontal = 3
script = ExtResource("1_4rby0")

[node name="Layout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="Layout"]
layout_mode = 2

[node name="InputX" type="LineEdit" parent="Layout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Layout/InputX"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -22.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = 22.0
grow_horizontal = 0
size_flags_horizontal = 0
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
texture = ExtResource("2_xmo17")
expand_mode = 1
stretch_mode = 4

[node name="InputY" type="LineEdit" parent="Layout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Layout/InputY"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -22.0
offset_top = 7.0
offset_right = -6.0
offset_bottom = 23.0
grow_horizontal = 0
texture = ExtResource("3_gtjwu")
expand_mode = 1
stretch_mode = 4

[node name="InputZ" type="LineEdit" parent="Layout"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Layout/InputZ"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -22.0
offset_top = 7.0
offset_right = -6.0
offset_bottom = 23.0
grow_horizontal = 0
texture = ExtResource("4_pcagv")
expand_mode = 1
stretch_mode = 4

[node name="Input" type="LineEdit" parent="Layout"]
visible = false
layout_mode = 2
size_flags_stretch_ratio = 20.0
